--- a/hsql-db/entity/db/.properties
+++ b/hsql-db/entity/db/.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.2
-#Fri Oct 06 11:24:35 CEST 2023
-tx_timestamp=210
-modified=yes
+#Wed Oct 11 18:42:22 CEST 2023
+tx_timestamp=288
+modified=no
 version=2.7.2
