[frontend][android] http setup

--- a/finted-android/app/build.gradle
+++ b/finted-android/app/build.gradle
@@ -64,4 +64,11 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.8.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
+    implementation "com.squareup.moshi:moshi-adapters:1.11.0"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    testImplementation "io.kotlintest:kotlintest:2.0.7"
 }
