--- a/hsql-db/entity/db/.properties
+++ b/hsql-db/entity/db/.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.2
-#Wed Oct 11 18:42:22 CEST 2023
-tx_timestamp=288
-modified=no
+#Sat Dec 02 11:53:52 CET 2023
+tx_timestamp=4574
+modified=yes
 version=2.7.2
