--- a/hsql-db/entity/db/.properties
+++ b/hsql-db/entity/db/.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.2
-#Sat Dec 02 11:53:52 CET 2023
-tx_timestamp=4574
-modified=yes
+#Sun Dec 03 17:00:34 CET 2023
+tx_timestamp=4934
+modified=no
 version=2.7.2
