--- a/finted-app/hsql-db/entity/db/.properties
+++ b/finted-app/hsql-db/entity/db/.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.2
-#Wed Oct 18 16:38:38 CEST 2023
-tx_timestamp=3962
+#Fri Dec 15 17:31:29 CET 2023
+tx_timestamp=4163
 modified=yes
 version=2.7.2
